refactor(KSTIP-3340): refactor last tests and tenantService mock to get tests running